--- a/examples/seshkitrc.ini
+++ b/examples/seshkitrc.ini
@@ -4,4 +4,4 @@
 service = aws
 service_creds_path = ~/sample/.aws/credentials
 service_profile = seshkituser
-output_bucket = my-seshkit-output-bucket
+default_bucket = my-seshkit-bucket
